<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".controlls.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:id="@+id/scroll"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="4">

                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_width="match_parent"
                    android:weightSum="1"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/cambio"
                        android:layout_gravity="bottom"
                        android:textSize="17sp"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear1"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/shape"
                    android:layout_marginEnd="10dp"
                    android:baselineAligned="false"
                    android:weightSum="2"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/txtEstadoRele"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/white"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/estado"
                            android:textSize="15sp"/>

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_height="match_parent">

                     <Button
                         android:id="@+id/btnCambiar"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/cambio"
                         android:fontFamily="sans-serif-black"/>


                    </RelativeLayout>



                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/monitoreo"
                        android:layout_gravity="bottom"
                        android:textSize="17sp"/>

                </LinearLayout>

                <LinearLayout
                    android:background="@drawable/shape"
                    android:orientation="vertical"
                    android:id="@+id/linear2"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:weightSum="4"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp">

                    <LinearLayout
                        android:id="@+id/rela1"
                        android:layout_weight="1"
                        android:weightSum="2"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@android:color/white"
                                android:fontFamily="sans-serif-black"
                                android:text="@string/Dato1"
                                android:textSize="15sp"/>

                        </RelativeLayout>
                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/txtDato1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@android:color/white"
                                android:fontFamily="sans-serif-black"
                                android:text="0"
                                android:textSize="15sp"/>

                        </RelativeLayout>



                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/rela2"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@android:color/white"
                                android:fontFamily="sans-serif-black"
                                android:text="@string/Dato2"
                                android:textSize="15sp"/>

                        </RelativeLayout>
                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/txtDato2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@android:color/white"
                                android:fontFamily="sans-serif-black"
                                android:text="0"
                                android:textSize="15sp"/>

                        </RelativeLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/rela3"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@android:color/white"
                                android:fontFamily="sans-serif-black"
                                android:text="@string/Dato3"
                                android:textSize="15sp"/>

                        </RelativeLayout>
                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/txtDato3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@android:color/white"
                                android:fontFamily="sans-serif-black"
                                android:text="0"
                                android:textSize="15sp"/>

                        </RelativeLayout>


                    </LinearLayout>



                    <LinearLayout
                        android:id="@+id/rela4"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@android:color/white"
                                android:fontFamily="sans-serif-black"
                                android:text="@string/Dato4"
                                android:textSize="15sp"/>

                        </RelativeLayout>
                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/txtDato4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@android:color/white"
                                android:fontFamily="sans-serif-black"
                                android:text="0"
                                android:textSize="15sp"/>

                        </RelativeLayout>


                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/tiemporeal"
                        android:layout_gravity="bottom"
                        android:textSize="17sp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear3"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_height="500dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical"
                    android:background="@drawable/shape"
                    android:weightSum="4">

                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/grafica"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clipChildren="false"
                        android:clipToPadding="false"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0">

                    </com.github.mikephil.charting.charts.LineChart>

                </LinearLayout>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnExportar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:layout_gravity="right"
                    android:layout_marginRight="10dp"
                    app:srcCompat="@mipmap/ic_launcher_round" />

                <LinearLayout
                    android:id="@+id/linear4"
                    android:layout_width="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_height="30dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:background="@drawable/shape">



                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/copy"
                        android:textSize="12sp"/>


                </LinearLayout>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>